--- a/MyDcode/package.json
+++ b/MyDcode/package.json
@@ -18,6 +18,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-webview": "^12.0.2"
   },
   "devDependencies": {
