--- a/MyDcode/package.json
+++ b/MyDcode/package.json
@@ -16,9 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
-    "react-native-splash-screen": "^3.3.0",
     "react-native-webview": "^12.0.2"
   },
   "devDependencies": {
@@ -30,11 +29,15 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
